@startuml Database_ER
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #F0F0F0

entity "users" {
  * id : INT
  --
  username : VARCHAR
  password : VARCHAR
  email : VARCHAR
  real_name : VARCHAR
  created_at : DATETIME
}

entity "user_roles" {
  * id : INT
  --
  user_id : INT
  role : VARCHAR
}

entity "classroom" {
  * id : INT
  --
  name : VARCHAR
  capacity : INT
  location : VARCHAR
}

entity "reservation" {
  * id : INT
  --
  user_id : INT
  classroom_id : INT
  start_time : DATETIME
  end_time : DATETIME
  status : VARCHAR
}

entity "equipment" {
  * id : INT
  --
  name : VARCHAR
  quantity : INT
  description : VARCHAR
}

entity "equipment_borrow" {
  * id : INT
  --
  user_id : INT
  equipment_id : INT
  borrow_date : DATETIME
  return_date : DATETIME
  status : VARCHAR
}

entity "lecture" {
  * id : INT
  --
  title : VARCHAR
  teacher_id : INT
  capacity : INT
  time : DATETIME
  location : VARCHAR
}

entity "lecture_signup" {
  * id : INT
  --
  user_id : INT
  lecture_id : INT
  status : VARCHAR
}

entity "study_room" {
  * id : INT
  --
  name : VARCHAR
  total_seats : INT
}

entity "seat_reservation" {
  * id : INT
  --
  user_id : INT
  seat_id : INT
  room_id : INT
  status : VARCHAR
  created_at : DATETIME
}

users ||--o{ user_roles : has
users ||--o{ reservation : makes
users ||--o{ equipment_borrow : borrows
users ||--o{ lecture_signup : signs_up
users ||--o{ seat_reservation : reserves
classroom ||--o{ reservation : has
equipment ||--o{ equipment_borrow : has
lecture ||--o{ lecture_signup : has
study_room ||--o{ seat_reservation : has

@enduml
